@@ -1,7 +1,10 @@
 package TestSchema::Result::Foo_Bar;
 
 use DBIx::Class::Candy
-   -components => [ 'Helper::Row::JoinTable' ];
+   -components => [
+      'Helper::Row::JoinTable',
+      'Helper::Row::SelfResultSet',
+   ];
 
 join_table({
    left_class   => 'Foo',
